--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8081/realms/mskleberlzrealm
+          issuer-uri: http://${KEYCLOAK_SERVER}:${KEYCLOAK_PORT}/realms/mskleberlzrealm
 
 server:
   port: 8080
@@ -21,4 +21,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://kleberlzms-eureka-user:erlseeakrer-sbzluk-ume@localhost:8762/eureka
+      defaultZone: http://kleberlzms-eureka-user:erlseeakrer-sbzluk-ume@${EUREKA_SERVER:8762/eureka
